force-app/main/default/objects/Opportunity_Link__c/Opportunity_Link__c.object-meta.xml
<CustomObject>
    <label>Opportunity Link</label>
    <nameField>
        <label>Opportunity Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Link</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>