force-app/main/default/objects/Opportunity_Link__c/fields/Child_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Link</relationshipLabel>
    <relationshipName>Opportunity_Link</relationshipName>
    <type>Lookup</type>
</CustomField>