force-app/main/default/objects/Opportunity_Link__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expansion-Renewal</fullName>
            </value>
            <value>
                <fullName>Sale-Renewal</fullName>
            </value>
            <value>
                <fullName>Churn-Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>