force-app/main/default/objects/Opportunity_Link__c/fields/Parent_Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Link__c</fullName>
    <formula>LEFT( $Api.Enterprise_Server_URL_540, FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_540)) &amp;  Parent_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity Link</label>
    <type>Text</type>
</CustomField>