force-app/main/default/objects/Opportunity_Link__c/fields/Primary_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Link__c</fullName>
    <formula>LEFT( $Api.Enterprise_Server_URL_540, FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_540)) &amp;  Parent_Opportunity__r.SBQQ__PrimaryQuote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote Link</label>
    <type>Text</type>
</CustomField>