force-app/main/default/objects/Opportunity_Link__c/fields/Renewal_Representative__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Link</relationshipName>
    <type>Lookup</type>
</CustomField>